src/objects/Release_Task__c.object
<CustomObject>
    <description>Track Bugs, Enhancement Requests, and Action Items to be resolved during the Build, Validate, Deploy and/or Post-Deployment phases.</description>
    <fields>
        <fullName>Age_in_days__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <label>Age (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_to_Premier_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssignedTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Interest_Score__c</fullName>
        <formula>Business_Value_Score__c + Data_Accuracy_Score__c + New_Process_Score__c + Productivity_Score__c + User_Friendliness_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Interest Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value_Score__c</fullName>
        <formula>CASE(Business_Value__c, &quot;Evolution requested has a negative impact&quot;, -20, &quot;Positive impact on business value&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <picklist>
            <picklistValues>
                <fullName>No impact</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive impact on business value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>CASE(Status__c  , 
&quot;Closed (Duplicate)&quot;, &quot;True&quot;,
&quot;Closed (Working As Designed)&quot;, &quot;True&quot;,
&quot;Closed (Question Answered)&quot;, &quot;True&quot;,
&quot;Closed (Verified)&quot;,&quot;True&quot;,
&quot;Closed (Not An Issue)&quot;,&quot;True&quot;,
&quot;False&quot;)</formula>
        <label>Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Portion__c</fullName>
        <label>Code Portion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Questions/Answers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_needed__c</fullName>
        <label>Communication needed</label>
        <picklist>
            <picklistValues>
                <fullName>Home Page Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Documentation Update</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Workitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Accuracy_Score__c</fullName>
        <formula>CASE(Data_Accuracy__c, &quot;Evolution requested has a negative impact on data quality&quot;, -20, &quot;Reduces risk of error on a importance information (example : direct link with cost or revenue)&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Accuracy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Accuracy__c</fullName>
        <label>Data Accuracy</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on data quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduces risk of error on a importance information (example : direct link with cost or revenue)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <inlineHelpText>Enter all metadata and manual deployment tasks related to this Release Task here.</inlineHelpText>
        <label>Deployment Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Derived_Urgency__c</fullName>
        <label>Derived Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>Low (Nice to have)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Comments__c</fullName>
        <label>Design Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Impact__c</fullName>
        <label>Design Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication to Design Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap Analysis with Release</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Development_Component__c</fullName>
        <label>Development Component</label>
        <picklist>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles and Security Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data quality/De duplication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Bug_Enhancement_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Bug/Enhancement Number</label>
        <referenceTo>Release_Task__c</referenceTo>
        <relationshipLabel>Duplicate Release Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort_to_completion__c</fullName>
        <label>Effort to completion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enhancement_Objective__c</fullName>
        <label>Enhancement Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_effort__c</fullName>
        <label>Estimated effort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faulty_Code_Portion__c</fullName>
        <label>Faulty Code Portion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <defaultValue>&quot;Field Name - New/Modified - Descritpion if Necessary&quot;</defaultValue>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Impact_Analysis__c</fullName>
        <label>Functional Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Score__c</fullName>
        <formula>Business_Interest_Score__c * User_or_Group_Impacted_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Business Interest Score) x (Scope of Change Impact Score)</inlineHelpText>
        <label>Global Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Details__c</fullName>
        <label>Impact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOE_Hours__c</fullName>
        <label>LOE (Hours)</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1 hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 8 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8+ to 40 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40+ to 160 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 160 hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Process_Score__c</fullName>
        <formula>CASE( New_Process__c , &quot;High impact&quot;, 10, &quot;Low impact &quot;, 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Process Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Process__c</fullName>
        <label>New Process</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High impact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_Change__c</fullName>
        <label>Object Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Release_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Release Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Release_Task__c.Release__c</field>
                <operation>equals</operation>
                <valueField>$Source.Release__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Release_Task__c</referenceTo>
        <relationshipLabel>Related Release Task</relationshipLabel>
        <relationshipName>ParentReleaseTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peripheral_Application_Impact__c</fullName>
        <label>Peripheral Application Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority/Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Productivity_Score__c</fullName>
        <formula>CASE( Productivity__c , &quot;Evolution requested has a negative impact on productivity&quot;, -20, &quot;Functional response time or process duration reduced&quot;, 10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <label>Productivity</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional response time or process duration reduced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Raised_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the original requester?</inlineHelpText>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <defaultValue>&quot;Record Type Name: New/Modified&quot; &amp;  BR() &amp; &quot;Description:&quot;</defaultValue>
        <label>Record Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_Business_Process__c</fullName>
        <label>Related to Business Process</label>
        <picklist>
            <picklistValues>
                <fullName>Agency Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Risk Management (IFAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing and Commercial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Release Tasks</relationshipLabel>
        <relationshipName>Release_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replacement_Code__c</fullName>
        <label>Replacement Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <label>Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java Script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Deployment to PREPROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Test in PREPROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Deployment to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Test in Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Duplicate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Verified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready in Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready In Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Impact_Analysis__c</fullName>
        <label>Technical Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_APEX_Class__c</fullName>
        <defaultValue>&quot;Class Name - Trigger/APEX Class&quot;&amp;  BR() &amp;
&quot;Description:&quot;</defaultValue>
        <label>Trigger  &amp; APEX Class</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Fix__c</fullName>
        <label>Type of Fix</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Around</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Friendliness_Score__c</fullName>
        <formula>CASE( User_Friendliness__c , &quot;Evolution requested has a negative impact on user friendliness&quot;, -20, &quot;Positive impact on user friendliness&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Friendliness Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Friendliness__c</fullName>
        <label>User Friendliness</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution requested has a negative impact on user friendliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive impact on user friendliness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Interface_Impact_Analysis__c</fullName>
        <label>User Interface Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_or_Group_Impacted_Score__c</fullName>
        <formula>CASE(User_or_Group_Impacted__c , &quot;Business Unit&quot;, 1, &quot;Country&quot;, 5, &quot;Region&quot;,5, &quot;All&quot;, 10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User or Group Impacted Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_or_Group_Impacted__c</fullName>
        <description>Which user or group is affected by the request</description>
        <inlineHelpText>Which user or group is affected by the request</inlineHelpText>
        <label>User or Group Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation_Rule__c</fullName>
        <defaultValue>&quot;Validation Rule Name&quot; &amp;  BR() &amp;
&quot;Description:&quot; &amp;  BR() &amp; 
&quot;Activated when:&quot;</defaultValue>
        <label>Validation Rule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround?</label>
        <picklist>
            <picklistValues>
                <fullName>Not relevant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing satisfactory alternative method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reasonable workaround (effort to make it happen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult workaround (effort to make it happen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No alternative or unacceptable alternative method</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workflow_Rule__c</fullName>
        <defaultValue>&quot;Workflow Rule Name&quot;&amp; BR() &amp;
&quot;Triggered when:&quot;&amp; BR() &amp;
&quot;Action:&quot;</defaultValue>
        <label>Workflow Rule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Release Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>Due_date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Release Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Tasks</pluralLabel>
    <recordTypes>
        <fullName>Action_Item</fullName>
        <active>true</active>
        <description>Tracks project issues that do not need to go through Triage.</description>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bug</fullName>
        <active>true</active>
        <description>Tracks bugs</description>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enhancement</fullName>
        <active>true</active>
        <label>Enhancement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implementation_Task</fullName>
        <active>true</active>
        <description>Tracks tasks that need to be done in this release</description>
        <label>Implementation Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Business_owner_mand</fullName>
        <active>true</active>
        <errorConditionFormula>or(isnull(Raised_by__c), isblank(Raised_by__c))</errorConditionFormula>
        <errorDisplayField>Raised_by__c</errorDisplayField>
        <errorMessage>Business owner mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Open_points_required</fullName>
        <active>true</active>
        <description>Open points are required if status goes to feedback required</description>
        <errorConditionFormula>IF( AND(ISPICKVAL(Status__c, &apos;Feedback required&apos;),ISBLANK( Communication_Comments__c )) , true, false)</errorConditionFormula>
        <errorDisplayField>Communication_Comments__c</errorDisplayField>
        <errorMessage>Cannot be blank if Status = Feedback required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>mandatory_tech_owner</fullName>
        <active>true</active>
        <errorConditionFormula>or(isnull(Assigned_to__c), isblank(Assigned_to__c))</errorConditionFormula>
        <errorDisplayField>Assigned_to__c</errorDisplayField>
        <errorMessage>The technical owner is a mandatory field</errorMessage>
    </validationRules>
</CustomObject>